--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
     "@vue/shared": "^3.0.0",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
+    "moment": "^2.29.3",
+    "node-sass": "^4.14.1",
     "regenerator-runtime": "^0.12.1",
+    "sass-loader": "^13.0.0",
     "vue": "^2.6.11",
     "vuex": "^3.2.0"
   },
