--- a/src/manifest.json
+++ b/src/manifest.json
@@ -47,7 +47,9 @@
                     "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
                 ]
             },
-            "ios" : {},
+            "ios" : {
+                "dSYMs" : false
+            },
             /* ios打包配置 */
             "sdkConfigs" : {
                 "ad" : {}
@@ -108,5 +110,12 @@
     },
     "mp-qq" : {
         "usingComponents" : true
+    },
+    "quickapp-webview" : {
+        "icon" : "unpackage/res/icons/1024x1024.png",
+        "package" : "com.chinamobile.js.xysqyz",
+        "minPlatformVersion" : 21,
+        "versionName" : "1.0",
+        "versionCode" : 10
     }
 }
