--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,8 +2,8 @@
     "name" : "数据导出",
     "appid" : "__UNI__11A0E0C",
     "description" : "",
-    "versionName" : "1.0.0",
-    "versionCode" : "100",
+    "versionName" : "1.2.0",
+    "versionCode" : 120,
     "transformPx" : false,
     "app-plus" : {
         /* 5+App特有相关 */
